--- a/peervpn/Config.in
+++ b/peervpn/Config.in
@@ -1,5 +1,5 @@
 config FREETZ_PACKAGE_PEERVPN
-	bool "Peervpn 0-036 (binary only)"
+	bool "Peervpn 0-036"
 	default n
 	select FREETZ_LIB_libcrypto 
 	select FREETZ_LIB_libssl 
