--- a/peervpn/files/root/etc/default.peervpn/peervpn.cfg
+++ b/peervpn/files/root/etc/default.peervpn/peervpn.cfg
@@ -1,20 +1,20 @@
 export PEERVPN_NETWORKNAME='testvpn'
 export PEERVPN_PSK='mytopsecretpassword'
-export PEERVPN_INITPEERS='192.168.10.252 7000'
+export PEERVPN_INITPEERS='example.com 7000'
 export PEERVPN_ENABLETUNNELING='yes'
 export PEERVPN_INTERFACE='peervpn0'
 export PEERVPN_IFCONFIG4='10.1.2.4/24'
 export PEERVPN_IFCONFIG6='2001:db8:1:2::3/64'
 export PEERVPN_UPCMD='echo virtual interface is up'
-export PEERVPN_LOCAL='192.168.10.22'
-export PEERVPN_PORT='7000'
+export PEERVPN_LOCAL='192.168.1.2'
+export PEERVPN_PORT='2345'
 export PEERVPN_SOCKMARK='0'
 export PEERVPN_ENABLEIPV4='yes'
-export PEERVPN_ENABLEIPV6='no'
+export PEERVPN_ENABLEIPV6='yes'
 export PEERVPN_ENABLENDPCACHE='yes'
 export PEERVPN_ENABLERELAY='no'
-export PEERVPN_ENGINE='padlock'
+export PEERVPN_ENGINE=''
 export PEERVPN_ENABLEPRIVDROP='yes'
-export PEERVPN_USER='nobody'
-export PEERVPN_GROUP='nogroup'
+export PEERVPN_USER='peervpn'
+export PEERVPN_GROUP='peervpn'
 export PEERVPN_CHROOT='/var/empty'
